...
                        .size(100.dp)
                        .height(180.dp)
                        .padding(bottom = 2.dp)
                )
//                Spacer(modifier = Modifier.height(1.dp))
                Text(
                    text = "Welcome to the Safe Drive Africa APP",
                    style = MaterialTheme.typography.headlineMedium,
                    textAlign = TextAlign.Center
                )
                Spacer(modifier = Modifier.height(8.dp))
                Text(
                    text = "A PhD Research Project App for encouraging Safe Driving Behaviour in Non-Western Countries - The Nigerian Focused Version 2025.\n" +
...
